fixing logos alignment

--- a/src/components/Contact/ContactPage.scss
+++ b/src/components/Contact/ContactPage.scss
@@ -8,7 +8,7 @@
   padding: 10%;
   color: $text2;
   height: fit-content;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .contactForm {
@@ -35,6 +35,7 @@
 
 .linkedInLogo {
   margin: 5vh 5vw;
+  padding-bottom: 14px;
   &:hover {
     transform: scale(0.6) rotate(-20deg);
     transition: 1s;
@@ -42,6 +43,14 @@
 }
 
 .githubLogo {
+  margin: 5vh 5vw;
+  &:hover {
+    transform: scale(0.6) rotate(20deg);
+    transition: 1s;
+  }
+}
+
+.upworkLogo {
   margin: 5vh 5vw;
   &:hover {
     transform: scale(0.6) rotate(20deg);
@@ -80,6 +89,7 @@
 
   .linkedInLogo {
     margin: 5vh 2vw;
+    padding-bottom: 12px;
     &:hover {
       transform: scale(0.6) rotate(-20deg);
       transition: 1s;
@@ -88,6 +98,14 @@
 
   .githubLogo {
     margin: 5vh 2vw;
+    &:hover {
+      transform: scale(0.6) rotate(-20deg);
+      transition: 1s;
+    }
+  }
+
+  .upworkLogo {
+    margin: 5vh 5vw;
     &:hover {
       transform: scale(0.6) rotate(20deg);
       transition: 1s;
